--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,18 @@
  <head> 
      <meta charset="UTF-8"> 
      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-     <title>Dreaded Pairing</title>  
+     <title>KYOTAKA pairing</title>  
  </head> 
  <body> 
-     <h1>Dreaded Pairing</h1>  
+     <h1>KYOTAKA pairing</h1>  
      <form action="/requestPairingCode" method="post"> 
          <label for="phoneNumber">Phone Number:</label> 
          <input type="text" id="phoneNumber" name="phoneNumber" required> 
-         <button type="submit">Request Pairing Code</button> 
+         <button type="submit">envoyer</button> 
      </form> 
      <div id="pairingCode"> 
          <!-- The pairing code will be displayed here --> 
      </div> 
-     <footer>Reserved!</footer>  
+     <footer>Dan jersey</footer>  
  </body> 
    </html>
